--- a/base/pom.xml
+++ b/base/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.7.8</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
