--- a/base/src/main/resources/application.yml
+++ b/base/src/main/resources/application.yml
@@ -9,6 +9,17 @@ spring:
 
 spring:
   profiles:
+    active: localnetwork
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.0.102:3306/merry_christmas?serverTimezone=UTC
+    username: root
+    password: root12345
+
+---
+
+spring:
+  profiles:
     active: uat
 
 ---
