--- a/base/src/main/resources/application-localnetwork.yml
+++ b/base/src/main/resources/application-localnetwork.yml
@@ -1,15 +1,15 @@
 server:
-  port: 8999
+  port: 8899
 spring:
   profiles:
-    active: local
+    active: localnetwork
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/merry_christmas?serverTimezone=UTC
+    url: jdbc:mysql://192.168.0.102:3306/merry_christmas?serverTimezone=UTC
     username: root
     password: root12345
 logging:
   file:
-    path: "C:/coder/log/log_info"
+    path: "C:/coder/log/log_local"
   level:
     root: info
