--- a/base/pom.xml
+++ b/base/pom.xml
@@ -120,6 +120,13 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- replace here with the latest version -->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-core</artifactId>
+            <version>1.8.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
