--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,12 @@
             <version>2.7.8</version>
             <scope>compile</scope>
         </dependency>
+        <!-- replace here with the latest version -->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-core</artifactId>
+            <version>1.8.0</version>
+        </dependency>
     </dependencies>
 
     <build>
